Fix for mainDiv alignment

--- a/CSS/Portfolio.css
+++ b/CSS/Portfolio.css
@@ -77,7 +77,7 @@
 
 #div1s{
     height: 95vh;
-    margin-top:18%;
+    margin-top:16%;
 }
 
 
